class TrustScoreCalculator:
    def __init__(self, completeness_weight: float = 0.5, update_weight: float = 0.5):
        self.completeness_weight = completeness_weight
        self.update_weight = update_weight

    def calculate_trust_score(self, completeness_score: float, update_score: float) -> float:
        return (completeness_score * self.completeness_weight) + (update_score * self.update_weight)

    def visualize_scores(self, df: pd.DataFrame, score: float) -> None:
        # Placeholder: Visualization logic
        print(f"Trust Score: {score}")
        df.plot(kind="bar")  # Example visualization
